projects/compiler/test/typechecker/typeidentifier/error_modalias_unknown_type.abra
import "./_exports" as e

val _: e.Bar[] = []
